# sandsim

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
crates/sandsim-core/: Cargo.toml
crates/sandsim-core/examples/: generate_fixtures.rs
crates/sandsim-core/src/: carve.rs  generators.rs  heightmap.rs  lib.rs  parser.rs  repose.rs  sim.rs
crates/sandsim-core/tests/: committed_fixtures_tests.rs  end_to_end_tests.rs  generator_tests.rs  generators_tests.rs  parser_tests.rs  sim_tests.rs
crates/sandsim-wasm/: Cargo.toml
crates/sandsim-wasm/src/: lib.rs
docs/: application-purpose.md  architecture.md  gcode-subset.md  phase-a-toolpath-viewer.md  phase-b-minimum-viable-sim.md  phase-c-hardening.md  sand-model.md
scripts/: ci-local.sh
tests/fixtures/: homing.gcode  rose.gcode  spiral.gcode  square.gcode  unsupported.gcode  v1_sandify.gcode  wall_clamp.gcode
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: main.test.ts  main.ts  sim-protocol.ts  sim.test.ts  test-setup.ts  types.ts  wasm.test.ts  wasm.ts  worker.ts
web/src/render/: ball.test.ts  ball.ts  lighting.test.ts  lighting.ts  noise.test.ts  noise.ts  sand-mesh.test.ts  sand-mesh.ts  scene.test.ts  scene.ts  toolpath.test.ts  toolpath.ts
web/src/ui/: controls.test.ts  controls.ts  file-drop.test.ts  file-drop.ts  warnings.test.ts  warnings.ts
